--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,13 @@
 			<version>20190722</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
+		</dependency>
+		
+
 	</dependencies>
 
 	<build>
