--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ server.port = 8081
 #JWT
 jwt.secret = germanSecret
 jwt.expiration = 1800000
+
+loggin.level.org.hibernate.SQL = DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder = TRACE
